# bevy-magic-duel

./: Cargo.toml
src/: lib.rs
src/actions/: mod.rs  movements.rs
src/camera/: mod.rs
src/client/: mod.rs
src/multiplayer/: config.rs
src/player/: mod.rs  movement.rs
src/protocol/: mod.rs
src/server/: mod.rs
src/shared/: mod.rs
src/states/: mod.rs
